# Voxy

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CompilerSettings.cmake  LICENSE  README.md  TODO.txt
.github/: CODEOWNERS
Sandbox/: CMakeLists.txt  Sandbox.cpp  SceneLayer.h
Sandbox/src/: main.cpp
TestApp/: CMakeLists.txt
TestApp/src/: TestLayer.cpp  TestLayer.hpp  main.cpp
Voxy/: Application.cpp  Application.h  CMakeLists.txt  Dependencies.cmake  Helpers.h  Log.cpp  Log.h  TODO.txt  Voxy.cpp  Voxy.h  Window.h  main.cpp
Voxy/Events/: Event.h  WindowEvent.h
Voxy/Layers/: ImGuiLayer.cpp  ImGuiLayer.h  Layer.h  LayerStack.cpp  LayerStack.h  RenderingLayer.cpp  RenderingLayer.h
Voxy/Platform/GLFW/: GLFWWindow.cpp  GLFWWindow.h
Voxy/Platform/Window/: Window.cpp
Voxy/Platform/Window/GLFW/: GLFWWindow.cpp
Voxy/Voxy/: Application.cpp  Application.h  EntryPoint.h  IWindow.cpp  IWindow.h  Setup.cpp  Setup.h  TimeStep.h  Timestep.h  Voxy.cpp  Window.cpp  Window.h  main.cpp
Voxy/Voxy/Events/: Event.h  WindowEvent.h
Voxy/Voxy/Graphics/: GraphicsContext.cpp  VertexBuffer.cpp  VertexBuffer.h
Voxy/Voxy/Layers/: ImGuiLayer.cpp  ImGuiLayer.h  Layer.h  LayerStack.cpp  LayerStack.h  RenderingLayer.cpp  RenderingLayer.h
Voxy/Voxy/Platform/GLFW/: Window.cpp  Window.h
Voxy/Voxy/Platform/OpenGL/: Buffer.cpp  Buffer.h  GraphicsContext.cpp  GraphicsContext.h  RenderCommand.cpp  RenderCommand.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
Voxy/Voxy/Platform/Window/: Window.cpp
Voxy/Voxy/Platform/Window/GLFW/: GLFWWindow.cpp  GLFWWindow.h  Window.cpp  Window.h
Voxy/Voxy/Renderer/: Buffer.cpp  Buffer.h  GraphicsContext.cpp  GraphicsContext.h  IGraphicsContext.cpp  IGraphicsContext.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexArray.h
Voxy/Voxy/Scene/: Entity.h  Scene.cpp  Scene.h
Voxy/Voxy/Scene/Components/: Camera.cpp  Camera.h  Transform.h
Voxy/src/: Application.cpp  Application.hpp  GraphicsContext.hpp  Helpers.h  Helpers.hpp  Log.cpp  Log.hpp  Mesh.hpp  Setup.cpp  Setup.hpp  Test.cpp  Time.hpp  Transform.hpp  Window.hpp  main.cpp
Voxy/src/Core/: Application.cpp  Application.hpp  GraphicsContext.hpp  Window.hpp
Voxy/src/ECS/: Camera.hpp  Entity.cpp  Entity.hpp  MeshRenderer.hpp  Scene.cpp  Scene.hpp  Transform.hpp
Voxy/src/Events/: Event.hpp  WindowEvents.hpp
Voxy/src/Layers/: GUILayer.hpp  Layer.hpp  LayerStack.cpp  LayerStack.hpp  RenderingLayer.hpp  TestLayer.cpp  TestLayer.hpp
Voxy/src/Platform/GLFW/: GLFW.cpp  GLFW.hpp  Window.cpp  Window.hpp
Voxy/src/Platform/OpenGL/: GraphicsContext.cpp  GraphicsContext.hpp  OpenGL.cpp  OpenGL.hpp  Renderer.cpp  Renderer.hpp
Voxy/src/Platform/OpenGL/Renderer/: Buffer.cpp  Buffer.hpp  CommandQueue.cpp  CommandQueue.hpp  Mesh.cpp  Mesh.hpp  RenderCommands.cpp  RenderCommands.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  VertexArray.cpp  VertexArray.hpp
Voxy/src/Renderer/: Buffer.hpp  Mesh.hpp  Renderer.hpp  Shader.hpp  VertexArray.hpp  Viewport.hpp
Voxy/src/platform/GLFW/: GLFW.cpp  GLFW_Window.cpp  GLFW_Window.hpp
Voxy/src/platform/OpenGL/: OpenGL.cpp  OpenGL.hpp  OpenGL_GraphicsContext.cpp  OpenGL_GraphicsContext.hpp  OpenGL_Renderer.cpp  OpenGL_Renderer.hpp
